--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+    text-decoration: none;
+}
+
+.content_heart {
+    width: 100%;
+    max-width: 1200px;
+    min-height: 100vh;
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 60px 0 0 0;
+}
