--- a/src/view/home/home.css
+++ b/src/view/home/home.css
@@ -1,5 +1,15 @@
 .home {
     width: 100%;
     background: black;
+}
+
+.home_title {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
     color: white;
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 60px;
 }
